2003-01-25  Daniel Luederwald <das_flip@gmx.de>

	* GNUmakefile (PCBaseFileTypes_RESOURCE_FILES): New type gsmarkup.
	* PCBaseFileType.m: Idem.

2002-11-27 15:45  probert

        * Mac OS X port using Cocoa

2002-11-04  Adam Fedor  <fedor@gnu.org>

	* PCBaseFileType.m (-createFileOfType:path:project:): Only add
	file extension if it doesn't already have one

2002-06-01 15:56  probert

	* GNUmakefile, PCBaseFileTypes.pcproj: Installation into
	GNUSPTE_INSTALLATION_DIR

2002-03-25 20:37  probert

	* ChangeLog: ChangeLog updates

2002-02-17 21:10  probert

	* ChangeLog: Updated the ChangeLog files

2002-02-16 21:43  probert

	* GNUmakefile, PCBaseFileType.m, PCBaseFileTypes.pcproj,
	nsviewclass.template, nsviewheader.template: Added support for a
	NSView subclass template. Also added a description to every file
	template.

2002-01-07 16:05  probert

	* ChangeLog: Updated all ChangeLog files (using cvs2cl.pl)

2002-01-07 16:01  probert

	* GNUmakefile, PCBaseFileTypes.pcproj: Added libProjectCenter to
	the bundle's library link settings.

2002-01-07 10:37  probert

	* PC.project, PCBaseFileTypes.pcproj: ProjectCenter now stores the
	project files under PROJECTNAME.pcproj to avoid name clashes.

2002-01-02 18:51  probert

	* PC.project: Changed the build tool entry to /usr/bin/make in all
	project files and templates.

2002-01-02 17:05  probert

	* GNUmakefile, PC.project: The inspector now handles the
	installation path and other settings. Furthermore it does not save
	changes automatically but marks the project as being edited.  Upon
	'save' the project file and GNUmakefile are being saved, not
	before! In addition the various PC* bundles are now maintained by
	ProjectCenter itself.  The installation path for ProjectCenter.app
	is corrected to the SYSTEM ROOT as well.

2002-01-02 13:13  probert

	* GNUmakefile: All bundles and libProjectCenter are now installed
	under GNUSTEP_SYSTEM_ROOT.  Also the PC.proj templates have now a
	correct install path default value.
