@@ -21,11 +21,11 @@ include $(GNUSTEP_MAKEFILES)/common.make
 # Bundle
 #
 
-PACKAGE_NAME=PCBaseFileTypes
-BUNDLE_NAME=PCBaseFileTypes
-BUNDLE_EXTENSION=.bundle
-BUNDLE_INSTALL_DIR=$(GNUSTEP_INSTALLATION_DIR)/Library/ProjectCenter
-PCBaseFileTypes_PRINCIPAL_CLASS=PCBaseFileType
+PACKAGE_NAME = PCBaseFileTypes
+BUNDLE_NAME = PCBaseFileTypes
+BUNDLE_EXTENSION = .bundle
+BUNDLE_INSTALL_DIR = $(GNUSTEP_SYSTEM_ROOT)/Library/ProjectCenter
+PCBaseFileTypes_PRINCIPAL_CLASS = PCBaseFileType
 
 
 #
